--- a/test-output/index.html
+++ b/test-output/index.html
@@ -155,11 +155,11 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;POM Test Suite&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Sample Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;E2E Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.soucedemo.ui.LoginTest&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Sample Test --&gt;
+  &lt;/test&gt; &lt;!-- E2E Test --&gt;
 &lt;/suite&gt; &lt;!-- POM Test Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -171,7 +171,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Sample Test (1 class)</span>
+                <span class="test-name">E2E Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -201,16 +201,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'eneTest')
 data.setCell(0, 2, 'com.soucedemo.ui.LoginTest')
-data.setCell(0, 3, 2046);
+data.setCell(0, 3, 2556);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'invalidLoginTest')
 data.setCell(1, 2, 'com.soucedemo.ui.LoginTest')
-data.setCell(1, 3, 682);
+data.setCell(1, 3, 671);
 window.suiteTableData['POM_Test_Suite']= { tableData: data, tableDiv: 'times-div-POM_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-POM_Test_Suite">
               </div> <!-- times-div-POM_Test_Suite -->
             </div> <!-- times-div -->
@@ -243,31 +243,31 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">PageSetUP</span>
-                <span class="method-start">4247 ms</span>
+                <span class="method-start">8250 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">eneTest</span>
-                <span class="method-start">4264 ms</span>
+                <span class="method-start">8320 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">6315 ms</span>
+                <span class="method-start">10886 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">SetUp</span>
-                <span class="method-start">6711 ms</span>
+                <span class="method-start">11405 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">PageSetUP</span>
-                <span class="method-start">9963 ms</span>
+                <span class="method-start">15598 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">invalidLoginTest</span>
-                <span class="method-start">9971 ms</span>
+                <span class="method-start">15602 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">10656 ms</span>
+                <span class="method-start">16275 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
