--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">POM Test Suite</th></tr>
-<tr><td><a href="#t0">E2E Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,784</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,704</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">POM Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">E2E Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.soucedemo.ui.LoginTest</td><td><a href="#m0">eneTest</a></td><td rowspan="1">1765115167447</td><td rowspan="1">2556</td></tr><tr class="passedeven"><td><a href="#m1">invalidLoginTest</a></td><td rowspan="1">1765115174729</td><td rowspan="1">671</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.soucedemo.ui.LoginTest</td><td><a href="#m0">eneTest</a></td><td rowspan="1">1765209661555</td><td rowspan="1">2698</td></tr><tr class="passedeven"><td><a href="#m1">invalidLoginTest</a></td><td rowspan="1">1765209667618</td><td rowspan="1">756</td></tr></tbody>
 </table>
-<h2>E2E Test</h2><h3 id="m0">com.soucedemo.ui.LoginTest#eneTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.soucedemo.ui.LoginTest#eneTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.soucedemo.ui.LoginTest#invalidLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
